Fixed: ships can appear too high or too low on the screen
Ships were added to the `#combat_zone` div, which used to include the actual “combat zone”, the stars-scrolling background, **and** the HUD (which was **not** actually inside the `hud` div).

To reduce the confusion, I've added a div around the HUD elements, and renamed everything:

*   `combat_zone` (actual zone + hud + background) is now `game_window`
*   `hud` (actually the combat zone + the HUD elements) is now `combat_zone`
*   the HUD elements are not in a `hud` div

(I didn't date move the `hud` _outside_ the `combat_zone`, even though it would have made things easier.)

Now, the space occupied by the HUD can more easily be taken into account when computing the available vertical space in the combat zone, when adding a ship to it. To do so, I've simply cannibalised the code from #101.

--- a/app/assets/stylesheets/_commons.scss
+++ b/app/assets/stylesheets/_commons.scss
@@ -126,7 +126,7 @@ a {
     }
   }
 
-  .combat_zone {
+  #game_window {
     height: 600px;
     margin: 0 auto;
     overflow: hidden;
@@ -200,7 +200,7 @@ a {
   }
 }
 
-.hud {
+#combat_zone {
   height: 100%;
   position: relative;
   width: 100%;
@@ -218,141 +218,147 @@ a {
     top: 25px;
     left: 10px;
   }
-
-  .opponent {
-    display: inline-block;
-    font-family: Consolas, monaco, monospace;
-    text-transform: uppercase;
-    color: $white;
-    font-size: 1.2em;
-    font-weight: normal;
-    line-height: 0;
-    padding: 0;
-    margin: 0;
-    position: absolute;
-    bottom: 60px;
-    right: 10px;
-  }
-
-  .edit_player {
-    display: inline-block;
-    font-family: Consolas, monaco, monospace;
-    text-transform: uppercase;
-    padding: 0;
-    margin: 0;
-    position: absolute;
-    bottom: 42px;
-    left: 10px;
-
-    input[type="text"] {
-      -moz-appearance: none;
-      -moz-box-sizing: border-box;
-      -webkit-appearance: none;
-      -webkit-box-sizing: border-box;
-      appearance: none;
-      background-color: transparent;
+  
+  .hud {
+    height: 100%;
+    position: relative;
+    width: 100%;
+  
+    .opponent {
+      display: inline-block;
+      font-family: Consolas, monaco, monospace;
       text-transform: uppercase;
-      border: 0;
-      box-sizing: border-box;
       color: $white;
-      font-family: Consolas, monaco, monospace;
       font-size: 1.2em;
-      line-height: 0;
-      margin: 0 auto;
-      text-align: left;
-      outline: none;
-      padding: 0;
-      width: 300px;
-      background-position: -1000px -1000px !important;
-    }
-  }
-
-  .player_bonus {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-    bottom: 50px;
-    left: 0;
-    right: 0;
-    margin: 0 auto;
-    width: 400px;
-    text-align: center;
-    z-index: 100;
-
-    img {
-      width: 28px;
-      height: 28px;
-      display: inline-block;
-      margin: 0;
-    }
-
-    p {
-      display: inline-block;
-      font-family: Consolas, monaco, monospace;
-      color: $white;
-      font-size: 1em;
       font-weight: normal;
       line-height: 0;
       padding: 0;
-      margin: 0 0 0 10px;
+      margin: 0;
+      position: absolute;
+      bottom: 60px;
+      right: 10px;
     }
-  }
 
-  #life_player, #life_opponent {
-    display: block;
-    width: 172px;
-    height: 45px;
-    background: asset-url("under_life.svg");
-    background-size: 172px 45px;
-    bottom: 0;
-    display: flex;
-    list-style-type:none;
-    margin: 0;
-    padding: 5px 26px 5px 5px;
-    position: absolute;
-    align-items: center;
-
-    .life_bar {
-      display: block;
-      width: 10px;
-      height: 28px;
-      margin: 0 4px 0 0;
+    .edit_player {
+      display: inline-block;
+      font-family: Consolas, monaco, monospace;
+      text-transform: uppercase;
       padding: 0;
-    }
+      margin: 0;
+      position: absolute;
+      bottom: 42px;
+      left: 10px;
 
-    .life_bar:nth-child(-n+3) {
-      svg {
-        fill: $life;
+      input[type="text"] {
+        -moz-appearance: none;
+        -moz-box-sizing: border-box;
+        -webkit-appearance: none;
+        -webkit-box-sizing: border-box;
+        appearance: none;
+        background-color: transparent;
+        text-transform: uppercase;
+        border: 0;
+        box-sizing: border-box;
+        color: $white;
+        font-family: Consolas, monaco, monospace;
+        font-size: 1.2em;
+        line-height: 0;
+        margin: 0 auto;
+        text-align: left;
+        outline: none;
+        padding: 0;
+        width: 300px;
+        background-position: -1000px -1000px !important;
       }
     }
 
-    .life_bar:nth-child(n+4) {
-      svg {
-        fill: lighten($life, 10);
+    .player_bonus {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: absolute;
+      bottom: 50px;
+      left: 0;
+      right: 0;
+      margin: 0 auto;
+      width: 400px;
+      text-align: center;
+      z-index: 100;
+
+      img {
+        width: 28px;
+        height: 28px;
+        display: inline-block;
+        margin: 0;
+      }
+
+      p {
+        display: inline-block;
+        font-family: Consolas, monaco, monospace;
+        color: $white;
+        font-size: 1em;
+        font-weight: normal;
+        line-height: 0;
+        padding: 0;
+        margin: 0 0 0 10px;
       }
     }
 
-    .life_bar:nth-child(n+7) {
-      svg {
-        fill: lighten($life, 20);
+    #life_player, #life_opponent {
+      display: block;
+      width: 172px;
+      height: 45px;
+      background: asset-url("under_life.svg");
+      background-size: 172px 45px;
+      bottom: 0;
+      display: flex;
+      list-style-type:none;
+      margin: 0;
+      padding: 5px 26px 5px 5px;
+      position: absolute;
+      align-items: center;
+
+      .life_bar {
+        display: block;
+        width: 10px;
+        height: 28px;
+        margin: 0 4px 0 0;
+        padding: 0;
+      }
+
+      .life_bar:nth-child(-n+3) {
+        svg {
+          fill: $life;
+        }
+      }
+
+      .life_bar:nth-child(n+4) {
+        svg {
+          fill: lighten($life, 10);
+        }
+      }
+
+      .life_bar:nth-child(n+7) {
+        svg {
+          fill: lighten($life, 20);
+        }
+      }
+
+      .life_bar:last-child {
+        svg {
+          fill: lighten($life, 30);
+        }
       }
     }
 
-    .life_bar:last-child {
-      svg {
-        fill: lighten($life, 30);
-      }
+    #life_player {
+      left: 0;
     }
-  }
 
-  #life_player {
-    left: 0;
-  }
-
-  #life_opponent {
-    right: 0;
-    transform: scaleX(-1)
+    #life_opponent {
+      right: 0;
+      transform: scaleX(-1)
+    }
   }
 }
 
